--- a/app/src/main/res/navigation/application_navigation_graph.xml
+++ b/app/src/main/res/navigation/application_navigation_graph.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/applicationNavigationGraph"
-    app:startDestination="@id/splashFragment">
+    app:startDestination="@id/gameSplashFragment">
 
     <fragment
-        android:id="@+id/splashFragment"
-        android:name="alexta.interviews.wallapop.wos.game.splash.view.GameSplashFragment"
+        android:id="@+id/gameSplashFragment"
+        android:name="alexta.interviews.wallapop.wos.game.view.splash.GameSplashFragment"
         android:label="Splash"
         tools:layout="@layout/fragment_game_splash">
 
