--- a/app/src/main/res/navigation/application_navigation_graph.xml
+++ b/app/src/main/res/navigation/application_navigation_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/gameSplashFragment"
-        android:name="alexta.interviews.wallapop.wos.game.splash.view.GameSplashFragment"
+        android:name="alexta.interviews.wallapop.wos.game.view.splash.GameSplashFragment"
         android:label="Splash"
         tools:layout="@layout/fragment_game_splash">
 
@@ -19,7 +19,7 @@
 
     <fragment
         android:id="@+id/gameBoardFragment"
-        android:name="alexta.interviews.wallapop.wos.game.board.view.GameBoardFragment"
+        android:name="alexta.interviews.wallapop.wos.game.view.board.GameBoardFragment"
         android:label="GameBoard"
         tools:layout="@layout/fragment_game_board" />
 
