--- a/app/src/main/res/layout/fragment_game_board.xml
+++ b/app/src/main/res/layout/fragment_game_board.xml
@@ -228,7 +228,7 @@
         app:srcCompat="@drawable/ic_game_reset" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/nextRoundButton"
+        android:id="@+id/gameBoardNextRoundButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
